tests/errors/missing_argument.ki
var f = Function(a, b):
    return a
f(1)
